trying to make form

--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@ title: Home
 <body>
     <h1>Manyus a cutie pie sweetheart :3</h1>
 
+    <div id="formWindow" class=":modal">
+
+        <div class="modal-content">
+            <span class="close">&times;</span>"
+            <h2>hello there :3</h2>
+            <form id="sleepForm">
+                <label for="grade">Grade: </label><br>
+                <select id="grade" name="grade">
+                    <option value=1>1</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                  </select><br>
+                <label for="name">Name: </label><br>
+                <input type="text" id="name" name="name"><br>
+                <input type="submit" value="submit">
+            </form>
+
+
+        </div>"
+
+    </div>
 
 
 </body>
