--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@ title: Home
 
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore.js"></script>
+
+    <script type="module" src="/scripts/firebaseform.js"></script>
 
 </body>
