--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@ title: Home
     <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore.js"></script>
 
-    <script type="module" src="/scripts/firebaseform.js"></script>
+    <script src="/scripts/firebaseform.js"></script>
 
 </body>
